[package]
name = "octavius"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
simple_logger = "5.0.0"
colorful = "0.3.2"
log = "0.4.26"
anyhow = "1.0.96"
bitflags = "2.8.0"

# Web Interface
rocket = { version = "0.5.1", features = ["tls"] }

# Database/ORM
sea-orm = { version = "1.1.5", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio"] }