[package]
name = "octavius-route"
description = "Rust implementation for managing routing tables on Linux and Windows environments"
categories = ["network-programming"]
keywords = ["routing", "routing-table", "linux", "windows"]
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
octavius-common.workspace = true
thiserror.workspace = true
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros"] }

# Linux
[target.'cfg(target_os="linux")'.dependencies]
rtnetlink = "0.14.1"
netlink-packet-route = "0.19.0"
futures-util = "0.3.31"

# Windows
[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.60.0", features = ["Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
